--- a/index.html
+++ b/index.html
@@ -9,4 +9,15 @@
 <body style="background-color:black;">
 			<div class="container"> <div class="centered-element"> <marquee style="font-family: impact; font-size:70px; color:White;" >KENAPA KALO CEWEK CANTIK ITU PASTI NAMA AWALNYA S TERUS BELAKANGNYA A </marquee> </div> </div>	
 </body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+<style>
+.container {display: grid; grid-template-columns: minmax(100vw, 1fr); grid-template-rows: minmax(100vh, 1fr); align-items: center; justify-content: center; }
+</style>
+				<meta charset="UTF-8">
+</head>
+<body style="background-color:black;">
+			<div class="container"> <div class="centered-element"> <marquee style="font-family: impact; font-size:70px; color:White;" >KENAPA KALO CEWEK CANTIK ITU PASTI NAMA AWALNYA S TERUS BELAKANGNYA A </marquee> </div> </div>	
+</body>
 </html>
