--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 				<meta charset="UTF-8">
 </head>
 <body style="background-color:black;">
-			<div class="container"> <div class="centered-element"> <marquee style="font-family: impact; font-size:70px; color:White;" >KENAPA KALO CEWEK CANTIK ITU PASTI NAMA AWALNYA S TERUS BELAKANGNYA A </marquee> </div> </div>	
+			<div class="container"> <div class="centered-element"> </div> </div>	
 </body>
 </html>
